version/dev/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/MappingOutsideOption.rst.txt
.. vale off



:class:`MappingOutsideOption`
=============================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.MappingOutsideOption

   Bases: :py:obj:`enum.Enum`


   
   Generic enumeration.

   Derive from this class to define new enumerations.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MappingOutsideOption

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Ignore`
            - 
          * - :py:attr:`~NearestNode`
            - 
          * - :py:attr:`~Projection`
            - 
          * - :py:attr:`~WeightedAvg`
            - 








Attribute detail
----------------
.. py:attribute:: Ignore
   :value: 0


.. py:attribute:: NearestNode
   :value: 3


.. py:attribute:: Projection
   :value: 2


.. py:attribute:: WeightedAvg
   :value: 1






.. vale on