version/dev/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/Enums/MappingOutsideOption.rst.txt
.. vale off



:class:`MappingOutsideOption`
=============================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.Enums.MappingOutsideOption(*args, **kwds)

   Bases: :py:obj:`enum.Enum`


   
   Create a collection of name/value pairs.

   Example enumeration:

   >>> class Color(Enum):
   ...     RED = 1
   ...     BLUE = 2
   ...     GREEN = 3

   Access them by:

   - attribute access:

     >>> Color.RED
     <Color.RED: 1>

   - value lookup:

     >>> Color(1)
     <Color.RED: 1>

   - name lookup:

     >>> Color['RED']
     <Color.RED: 1>

   Enumerations can be iterated over, and know how many members they have:

   >>> len(Color)
   3

   >>> list(Color)
   [<Color.RED: 1>, <Color.BLUE: 2>, <Color.GREEN: 3>]

   Methods can be added to enumerations, and members can have their own
   attributes -- see the documentation for details.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MappingOutsideOption

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Ignore`
            - 
          * - :py:attr:`~NearestNode`
            - 
          * - :py:attr:`~Projection`
            - 
          * - :py:attr:`~WeightedAvg`
            - 








Attribute detail
----------------
.. py:attribute:: Ignore
   :value: 0


.. py:attribute:: NearestNode
   :value: 3


.. py:attribute:: Projection
   :value: 2


.. py:attribute:: WeightedAvg
   :value: 1






.. vale on